NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/cert_pcb.cab
version https://git-lfs.github.com/spec/v1
oid sha256:4c9ba3b84a581bc52cc3b9ee98197d15a16fe904483bab477e6c45ae8b9e3c91
size 55876
